--- a/todo-app-fixed/package.json
+++ b/todo-app-fixed/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "lodash": "^4.17.11",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.3",
+    "react-virtualized": "^9.20.1",
     "why-did-you-update": "^0.1.1"
   },
   "scripts": {
