--- a/todo-app-fixed/package.json
+++ b/todo-app-fixed/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.3",
     "react-virtualized": "^9.20.1",
+    "react-window": "^1.2.1",
     "why-did-you-update": "^0.1.1"
   },
   "scripts": {
